fix: exception on mobile if double touched and released only latest one

--- a/src/widgets/page/PageContainer.module.scss
+++ b/src/widgets/page/PageContainer.module.scss
@@ -1,14 +1,8 @@
 @import "src/css/material";
 
 .container {
-  width: 100vw;
-  min-height: 100vh;
-
-  /* mobile viewport bug fix */
-  @media screen and (-webkit-min-device-pixel-ratio: 0) {
-    //noinspection CssInvalidPropertyValue
-    min-height: -webkit-fill-available;
-  }
+  width: 100%;
+  height: 100%;
 
   background-color: $light-gray-background;
   color: $gray-font-color;
